--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -48,7 +48,7 @@
                     <input type="text" placeholder="Model"[(ngModel)]="product.model" name="model">
                     <input type="text" placeholder="Price"[(ngModel)]="product.price" name="price">
                     <input type="text" placeholder="Quantity"[(ngModel)]="product.qty" name="qty">
-                    <input type="file" placeholder="Choose an image"[(ngModel)]="product.img" name="img">
+                    <input type="text" placeholder="productimage"[(ngModel)]="product.img" name="qty">
                     <input type="submit" value="Add">
                 </div>
                 <div class="close-box">
