--- a/src/app/invoicedesign/invoicedesign.component.css
+++ b/src/app/invoicedesign/invoicedesign.component.css
@@ -191,5 +191,590 @@ footer p {
     background-color: var(--white);
     display: inline-block;
 }
+/* Googlefont Poppins CDN Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  min-height: 100vh;
+  width: 100%;
+}
+.sidebar{
+  position: fixed;
+  height: 100%;
+  width: 20vw;
+  background: #0A2558;
+  flex-direction: column;
+  transition:all 0.5s ease;
+  
+}
 
+.sidebar .logo-details{
+  height: 80px;
+  width: 100%;
+  display:flex;
+  align-items: center;
+}
+.sidebar .logo-details i{
+  font-size: 28px;
+  font-weight: 500;
+  color: #fff;
+  min-width: 60px;
+  text-align: center
+}
+
+  .sidebar .logo-details .logo_name{
+    color: #fff;
+    font-size: 24px;
+    font-weight: 500;
+    margin-left:8px;
+  }
+  .sidebar .nav-links{
+    margin-top: 10px;
+
+  }
+  .sidebar .nav-links li{
+    height: 50px;
+    width: 100%;
+    list-style: none;
+  }
+  .sidebar .nav-links li a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    transition: all 0.4s ease;
+  }
+  .sidebar .nav-links li a.active{
+    background: #081D45;
+  }
+  .sidebar .nav-links li a:hover{
+    background: #081D45;
+  }
+  .sidebar .nav-links li i{
+    /* background: red;*/
+    min-width: 60px;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+  }
+  .sidebar .nav-links li a .links_name{
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    white-space: nowrap;
+  
+  }
+  .sidebar .nav-links .log_out{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  /* Home- section css */
+  .home-section{
+    position: fixed;
+    background: #f5f5f5;
+    min-height: 100vh;
+    width: calc(100% - 240px);
+    left: 240px;
+    transition: all 0.5s ease;
+  }
+  
+  .sidebar.active ~ .home-section{
+    width: calc(100% - 60px);
+    left: 60px;
+  }
+  .home-section{
+    position: relative;
+    background: #f5f5f5;
+    min-height: 100vh;
+    width: calc(100% - 240px);
+    left: 240px;
+    transition: all 0.5s ease;
+  }
+  .sidebar.active ~ .home-section{
+    width: calc(100% - 60px);
+    left: 60px;
+  }
+  .home-section nav{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    width: calc(100% - 240px);
+    left: 240px;
+    z-index: 100;
+    padding: 0 20px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s ease;
+  }
+  .sidebar.active ~ .home-section nav{
+    left: 60px;
+    width: calc(100% - 60px);
+  }
+  .home-section nav .sidebar-button{
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 500;
+  }
+  nav .sidebar-button i{
+    font-size: 35px;
+    margin-right: 10px;
+  }
+  .home-section nav .search-box{
+    position: relative;
+    height: 50px;
+    max-width: 550px;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .side-menu li:hover {
+    background: #013440;
+    padding: 8px 38px;
+    border: 2px solid white;
+}
+  nav .search-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    background: #F5F6FA;
+    border: 2px solid #EFEEF1;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0 15px;
+  }
+  nav .search-box .bx-search{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background: #2697FF;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 4px;
+    line-height: 40px;
+    text-align: center;
+    color: #fff;
+    font-size: 22px;
+    transition: all 0.4 ease;
+  }
+  /* Home- section css */
+  .home-section .home-content{
+    position: relative;
+    padding-top: 104px;
+  }
+  .home-content .card{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 20px;
+    margin-bottom: 26px;
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+  }
+  
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  
+  
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
+  p{
+    text-align: left;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  body {
+    min-height: 100vh;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  li {
+    list-style: none;
+  }
+  
+  h1,
+  h2 {
+    color: #fff;
+  }
+  
+  h3 {
+    color: #999;
+  }
+  
+  .btn {
+    background: #013440;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+  }
+  
+  .btn:hover {
+    color: #013440;
+    background: white;
+    padding: 3px 8px;
+    border: 2px solid #013440;
+  }
+  
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px 10px;
+    border-bottom: 2px solid #999;
+  }
+  
+  table {
+    padding: 10px;
+  }
+  
+  th,
+  td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  .side-menu {
+    position: fixed;
+    background: #013440;
+    width: 20vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .side-menu .brand-name {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .side-menu li {
+    font-size: 24px;
+    padding: 10px 40px;
+    color: white;
+    display: flex;
+    align-items: center;
+  }
+  
+  .side-menu li:hover {
+    background: white;
+    color: #013440;
+  }
+  
+  .container {
+    position: absolute;
+    right: 0;
+    width: 80vw;
+    height: 100vh;
+    background: #f1f1f1;
+  }
+  
+  .container .header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 80vw;
+    height: 10vh;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .container .header .nav {
+    width: 90%;
+    display: flex;
+    align-items: center;
+  }
+  
+  .container .header .nav .search {
+    flex: 3;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .container .header .nav .search input[type=text] {
+    border: none;
+    background: #f1f1f1;
+    padding: 10px;
+    width: 50%;
+  }
+  
+  .container .header .nav .search button {
+    width: 40px;
+    height: 40px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .container .header .nav .search button img {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .container .header .nav .user {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .container .header .nav .user img {
+    width: 40px;
+    height: 40px;
+  }
+  
+  .container .header .nav .user .img-case {
+    position: relative;
+    width: 50px;
+    height: 50px;
+  }
+  
+  .container .header .nav .user .img-case img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .container .user .btn-area{
+    background: #013440;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 18px;
+    height: 1cm;
+    justify-content: space-around;
+    padding: 10px 18px;   
+  }
+  
+  .container .content {
+    position: relative;
+    margin-top: 10vh;
+    min-height: 90vh;
+    background: #f1f1f1;
+  }
+  
+  .container .content .cards {
+    padding: 20px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    }
+  
+  .container .content .cards .card {
+    width: 250px;
+    height: 150px;
+    background:#013440;
+    margin: 20px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+    
+  .container .content .content-2 {
+    min-height: 60vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .container .content .content-2 .recent-payments {
+    min-height: 50vh;
+    flex: 5;
+    background: white;
+    margin: 0 25px 25px 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    
+    
+  }
+  .container .content .content-2 .recent-payments .title{
+    background-color:#013440 ;
+  }
+  
+  .container .content .content-2 .new-students {
+    flex: 2;
+    background: white;
+    min-height: 50vh;
+    margin: 0 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+  }
+  .container .content .content-2 .new-students .title{
+    background-color: #013440;
+  }
+  
+  .container .content .content-2 .new-students table td:nth-child(1) img {
+    height: 40px;
+    width: 40px;
+  }
+  
+  @media screen and (max-width: 1050px) {
+    .side-menu li {
+        font-size: 18px;
+    }
+  }
+  
+  @media screen and (max-width: 940px) {
+    .side-menu li a {
+        display: none;
+    }
+    .side-menu {
+        align-items: center;
+    }
+    .side-menu li img {
+        width: 40px;
+        height: 40px;
+    }
+    .side-menu li:hover {
+        background: #013440;
+        padding: 8px 38px;
+        border: 2px solid white;
+    }
+  }
+  
+  @media screen and (max-width:536px) {
+    .brand-name h1 {
+        font-size: 16px;
+    }
+    .container .content .cards {
+        justify-content: center;
+    }
+    .side-menu li img {
+        width: 30px;
+        height: 30px;
+    }
+    .container .content .content-2 .recent-payments table th:nth-child(2),
+    .container .content .content-2 .recent-payments table td:nth-child(2) {
+        display: none;
+    }
+  }
+  
+  #chkBox{
+    display: none;
+  }
+  .mainContnt{
+    width: 100%;
+    height: 100%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.7s;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 300;
+    background: rgba(0,0,0,0.8);
+    
+  }
+  .box{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 50%;
+    height: 600px;
+    transform: translateY(-1000px);
+    transition: all 2s;
+    margin: auto;
+    background: #fff;
+    
+    
+  }
+  
+  
+  .bx1{
+    background-image: url(6.jpg);
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+  .bx2{
+    padding: 60px 32px 0 32px;
+  }
+  .bx2 h3 {
+  margin-bottom: 16px;
+  text-transform: uppercase;
+  }
+  .login-form input {
+  width: 100%;
+  height:14px;
+  padding: 20px;
+  margin-bottom: 25px;
+  }
+  .login-form input[type="submit"] {
+  background: rgb(10, 8, 78);
+  font-size: 25px;
+  text-transform: uppercase;
+  line-height: 5px;
+  color: #fff;
+  height: auto;
+  margin-bottom: 10px;
+  }
+  
+  .close-box{
+    position: relative;
+    text-align: right;
+    color: #262626;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 10cm;
+    margin-bottom: 10px;
+    
+    
+  }
+  .box-close {
+  position: absolute;
+  bottom: 520px;
+  right: 5px;
+  }
+  #chkBox:checked + .mainContnt{
+    visibility: visible;
+    opacity: 1;
+  }
+  #chkBox:checked + .mainContnt .box{
+    transform: translateY(0);
+  }
+  
 
