--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -45,58 +45,30 @@
     <tr *ngFor="let i of data">
       <td>
        
-          <div *ngIf="i.isEdit">
-            <input type="text" name="prdtcat" class="form-control" [(ngModel)]="i.pcategory">
-          </div>
-          <div *ngIf="!i.isEdit">
-            {{i.pcategory}}
-          </div>
         {{i.pcategory}}</td>
 
       <td>
-        <div *ngIf="i.isEdit">
-          <input type="text" name="prdtname" class="form-control" [(ngModel)]="i.pname">
-        </div>
-        <div *ngIf="!i.isEdit">
-          {{i.pname}}
-        </div>
+        
         {{i.pname}}</td>
 
       <td>
-        <div *ngIf="i.isEdit">
-          <input type="text" name="prdtprice" class="form-control" [(ngModel)]="i.price">
-        </div>
-        <div *ngIf="!i.isEdit">
-          {{i.price}}
-        </div>
+        
         {{i.price}}</td>
 
       <td>
-        <div *ngIf="i.isEdit">
-          <input type="text" name="prdtqty" class="form-control" [(ngModel)]="i.qty">
-        </div>
-        <div *ngIf="!i.isEdit">
-          {{i.qty}}
-        </div>
+       
         {{i.qty}}</td>
         
-      <td><button class="btn btn-success" (click)="onEdit(i)">Edit</button></td>
-      <td><button class="btn btn-danger"(click)="Deleteprdt(i)">Delete</button></td>      
+      <td><button class="btn btn-success" >Edit</button></td>
+      <td><button class="btn btn-danger">Delete</button></td>      
     </tr>
 
     </tbody>
     
 </table>
 </div>
-<div *ngIf="i.isEdit">
-  <table class="g-3">
-    <tr>
-      <td><button class="btn btn-primary" (click)="Updatedriver(i)">save</button></td>
-      &nbsp;
-      <td> <button class="btn btn-danger" (click)="i.isEdit = false">cancel</button></td>
-    </tr>
-  </table>
-</div>
+
+  
 
   </div>
 </div>
